--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "scripty",
   "private": true,
-  "version": "1.0.2",
+  "version": "0.8.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -18,6 +18,8 @@
     "@tauri-apps/plugin-dialog": "^2.3.2",
     "@tauri-apps/plugin-fs": "^2.4.1",
     "@tauri-apps/plugin-opener": "^2",
+    "@tauri-apps/plugin-process": "^2.3.0",
+    "@tauri-apps/plugin-updater": "^2.9.0",
     "motion": "^12.23.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
