--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "scripty"
-version = "1.0.2"
+version = "0.8.0"
 description = "A Tauri App"
 authors = ["(N)ew_You"]
 edition = "2021"
@@ -25,4 +25,8 @@ serde_json = "1"
 tauri-plugin-dialog = "2"
 windows = "0.61.3"
 tauri-plugin-fs = "2"
+tauri-plugin-process = "2"
+
+[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
+tauri-plugin-updater = "2"
 
